--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div
-          class="flex w-[19.438rem] flex-col items-center gap-[1.188rem] bg-[url('../images/pattern-quotes.svg')] bg-[length:60px_50px] bg-[center_top] bg-no-repeat pt-[1.563rem] text-center xl:h-[22.125rem] xl:w-[39.688rem] xl:items-start xl:gap-8 xl:bg-[length:120px_100px] xl:pt-16 xl:text-left"
+          class="flex w-[19.438rem] flex-col items-center gap-[1.188rem] bg-[url('../images/pattern-quotes.svg')] bg-[length:60px_50px] bg-[center_top] bg-no-repeat pt-[1.563rem] text-center xl:h-[22.125rem] xl:w-[39.688rem] xl:items-start xl:gap-8 xl:bg-[length:120px_100px] xl:bg-[5.938rem_top] xl:pt-16 xl:text-left"
         >
           <p
             class="text-lg font-light leading-6 tracking-normal text-[#202047] xl:text-[2rem] xl:leading-[2.75rem]"
