--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <title>Coding Bootcamp Testimonials Slider</title>
   </head>
   <body
-    class="grid h-[100vh] place-items-center bg-[#F2F2F2] bg-[url('../images/pattern-curve.svg')] bg-[length:285px_72px] bg-left-bottom bg-no-repeat xl:h-auto xl:bg-[length:610px_150.94px]"
+    class="grid h-[100vh] place-items-center bg-[#F2F2F2] bg-[url('../images/pattern-curve.svg')] bg-[length:285px_72px] bg-left-bottom bg-no-repeat font-['Inter'] xl:h-auto xl:bg-[length:610px_150.94px]"
   >
     <header class="absolute left-[-99999px] top-[-99999px]">
       <h1>Coding Bootcamp Testimonials Slider</h1>
@@ -45,12 +45,9 @@
           <p
             class="text-lg font-light leading-6 tracking-normal text-[#202047] xl:text-[2rem] xl:leading-[2.75rem]"
           >
-            “ I’ve been interested in coding for a while
-            <br class="hidden xl:inline" />
-            but never taken the jump, until now. I
-            <br class="hidden xl:inline" />
-            couldn’t recommend this course enough. I’m now in the job of my
-            dreams and so excited about the future. ”
+            “ I’ve been interested in coding for a while but never taken the
+            jump, until now. I couldn’t recommend this course enough. I’m now in
+            the job of my dreams and so excited about the future. ”
           </p>
           <div
             class="flex flex-col items-center gap-0 xl:flex-row xl:gap-[0.625rem]"
@@ -90,14 +87,10 @@
           <p
             class="text-lg font-light leading-6 tracking-normal text-[#202047] xl:text-[2rem] xl:leading-[2.75rem]"
           >
-            “ If you want to lay the best <br class="xl:hidden" />
-            foundation <br class="hidden xl:inline" />
-            possible I’d recommend taking this course.
-            <br class="hidden xl:inline" />
-            The depth the instructors go into is <br class="hidden xl:inline" />
-            incredible. I <br class="xl:hidden" />
-            now feel so confident about starting up as a professional developer.
-            ”
+            “ If you want to lay the best foundation possible I’d recommend
+            taking this course. The depth the instructors go into is incredible.
+            I now feel so confident about starting up as a professional
+            developer. ”
           </p>
           <div
             class="flex flex-col items-center gap-0 xl:flex-row xl:gap-[0.625rem]"
