--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <title>Coding Bootcamp Testimonials Slider</title>
   </head>
   <body
-    class="grid h-[100vh] place-items-center bg-[#F2F2F2] bg-[url('../images/pattern-curve.svg')] bg-[length:285px_72px] bg-left-bottom bg-no-repeat font-['Inter'] xl:h-auto xl:bg-[length:610px_150.94px]"
+    class="grid h-[100vh] place-items-center bg-white bg-[url('../images/pattern-curve.svg')] bg-[length:285px_72px] bg-left-bottom bg-no-repeat font-['Inter'] xl:h-auto xl:bg-[length:610px_150.94px]"
   >
     <header class="absolute left-[-99999px] top-[-99999px]">
       <h1>Coding Bootcamp Testimonials Slider</h1>
@@ -24,7 +24,7 @@
       class="relative mx-auto mt-6 mb-[4.688rem] flex h-[35.5rem] w-[20.438rem] flex-col items-center xl:mt-[3.125rem] xl:ml-[10.313rem] xl:mr-[4.563rem] xl:mb-[5.813rem] xl:h-[41.063rem] xl:w-[75.125rem]"
     >
       <div
-        class="slide absolute top-0 flex flex-col items-center gap-8 transition-[visibility,_opacity] duration-300 ease-in xl:flex-row-reverse xl:gap-0"
+        class="slide absolute top-0 flex flex-col items-center gap-8 transition-[visibility,_opacity] duration-300 ease-in xl:flex-row-reverse xl:items-start xl:gap-0"
       >
         <div
           class="h-[19.25rem] w-full bg-[url('../images/pattern-bg.svg')] bg-contain bg-no-repeat px-[2.313rem] pt-[1.875rem] pb-[1.563rem] xl:ml-[-8.125rem] xl:h-[41.063rem] xl:w-[43.563rem] xl:pb-[3.375rem] xl:pr-[5.75rem] xl:pt-[3.938rem] xl:pl-[4.063rem]"
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div
-          class="flex w-[19.438rem] flex-col items-center gap-[1.188rem] bg-[url('../images/pattern-quotes.svg')] bg-[length:60px_50px] bg-[center_top] bg-no-repeat pt-[1.563rem] text-center xl:h-[22.125rem] xl:w-[39.688rem] xl:items-start xl:gap-8 xl:bg-[length:120px_100px] xl:bg-[5.938rem_top] xl:pt-16 xl:text-left"
+          class="flex w-[19.438rem] flex-col items-center gap-[1.188rem] bg-[url('../images/pattern-quotes.svg')] bg-[length:60px_50px] bg-[center_top] bg-no-repeat pt-[1.563rem] text-center xl:mt-[10.25rem] xl:h-[22.125rem] xl:w-[39.688rem] xl:items-start xl:gap-8 xl:bg-[length:120px_100px] xl:bg-[5.938rem_top] xl:pt-16 xl:text-left"
         >
           <p
             class="text-lg font-light leading-6 tracking-normal text-[#202047] xl:text-[2rem] xl:leading-[2.75rem]"
