--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div
-        class="slide pointer-events-none invisible absolute top-0 flex flex-col items-center gap-8 opacity-0 transition-[visibility,_opacity] duration-300 ease-in xl:flex-row-reverse xl:gap-0"
+        class="slide pointer-events-none invisible absolute top-0 flex flex-col items-center gap-8 opacity-0 transition-[visibility,_opacity] duration-300 ease-in xl:flex-row-reverse xl:items-start xl:gap-0"
       >
         <div
           class="h-[19.25rem] w-full bg-[url('../images/pattern-bg.svg')] bg-contain bg-no-repeat px-[2.313rem] pt-[1.875rem] pb-[1.563rem] xl:ml-[-8.125rem] xl:h-[41.063rem] xl:w-[43.563rem] xl:pb-[3.375rem] xl:pr-[5.75rem] xl:pt-[3.938rem] xl:pl-[4.063rem]"
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div
-          class="flex w-[19.438rem] flex-col items-center gap-[1.188rem] bg-[url('../images/pattern-quotes.svg')] bg-[length:60px_50px] bg-[center_top] bg-no-repeat pt-[1.563rem] text-center xl:h-[22.125rem] xl:w-[39.688rem] xl:items-start xl:gap-8 xl:bg-[length:120px_100px] xl:bg-[5.938rem_top] xl:pt-16 xl:text-left"
+          class="flex w-[19.438rem] flex-col items-center gap-[1.188rem] bg-[url('../images/pattern-quotes.svg')] bg-[length:60px_50px] bg-[center_top] bg-no-repeat pt-[1.563rem] text-center xl:mt-[10.25rem] xl:h-[22.125rem] xl:w-[39.688rem] xl:items-start xl:gap-8 xl:bg-[length:120px_100px] xl:bg-[5.938rem_top] xl:pt-16 xl:text-left"
         >
           <p
             class="text-lg font-light leading-6 tracking-normal text-[#202047] xl:text-[2rem] xl:leading-[2.75rem]"
