--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div
-        class="absolute left-[7.75rem] top-[16.438rem] flex h-10 w-[5rem] items-center gap-0 shadow-[0px_15px_20px_-10px_rgba(36,36,113,0.0991)] xl:top-[35.938rem] xl:left-[39.5rem] xl:h-14 xl:w-[7rem]"
+        class="absolute left-[7.75rem] top-[16.438rem] flex h-10 w-[5rem] items-center gap-0 rounded-[28px] shadow-[0px_15px_20px_-10px_rgba(36,36,113,0.0991)] xl:top-[35.938rem] xl:left-[39.5rem] xl:h-14 xl:w-[7rem]"
       >
         <button
           id="prev"
